@@ -415,6 +415,9 @@ audioop
 
 Added support for 24-bit samples (:issue:`12866`).
 
+Added the :func:`~audioop.byteswap` function to convert big-endian samples
+to little-endian and vice versa (:issue:`19641`).
+
 
 base64
 ------
